WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212050
Rare crash under -[WKContentView resignFirstResponderForWebView]
https://bugs.webkit.org/show_bug.cgi?id=212050
Summary
Rare crash under -[WKContentView resignFirstResponderForWebView]
Tim Horton
Reported
2020-05-18 15:29:45 PDT
Rare crash under -[WKContentView resignFirstResponderForWebView]
Attachments
Patch
(2.92 KB, patch)
2020-05-18 15:30 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-05-18 15:30:19 PDT
Created
attachment 399677
[details]
Patch
Tim Horton
Comment 2
2020-05-18 15:30:21 PDT
<
rdar://problem/60187111
>
Wenson Hsieh
Comment 3
2020-05-18 15:32:54 PDT
Comment on
attachment 399677
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399677&action=review
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1412 > + if (strongSelf->_keyWebEventHandler.get() != strongHandler.get())
Nit - are both of these .get() needed?
Megan Gardner
Comment 4
2020-05-18 15:34:53 PDT
Comment on
attachment 399677
[details]
Patch r=me as well
Tim Horton
Comment 5
2020-05-18 16:02:33 PDT
Comment on
attachment 399677
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399677&action=review
>> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1412 >> + if (strongSelf->_keyWebEventHandler.get() != strongHandler.get()) > > Nit - are both of these .get() needed?
As we learned extensively on Slack, yes, because this code is being pretty dirty and WeakObjCPtr<id>-ing the block, and no combination of BlockPtr/WeakObjCPtr on either side make enough implicit conversions that you can drop either get (nor both).
EWS
Comment 6
2020-05-18 16:31:47 PDT
Committed
r261838
: <
https://trac.webkit.org/changeset/261838
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399677
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug